[gd_scene load_steps=3 format=3 uid="uid://cwb0wa3v00ngc"]

[ext_resource type="Script" path="res://NodeCollection/PhysicBubble/physic_bubble.gd" id="1_5oo1w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3yvl2"]
size = Vector3(25, 5, 25)

[node name="PhysicBubble" type="Area3D"]
script = ExtResource("1_5oo1w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3yvl2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
